Trying to fix python 2 compatibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ numpy==1.16.1
 git+https://github.com/uob-mediapatterns/macsy,
 git+https://github.com/uob-mediapatterns/liwc
 python-dateutil==2.7.3
+pytz==2005k
